implemented color changing based on album art, improved hover effect

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "colorthief": "^2.4.0",
     "request": "^2.88.2",
     "spotify-web-api-js": "^1.5.2"
   }
